--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -42,6 +42,16 @@ jobs:
           ls -lah site/data || true
           find site/data -type f -name '*.json' -print | sed 's/^/  /' || true
 
+      # NEW: create env.js from GitHub Secrets
+      - name: Create env.js for production
+        run: |
+          mkdir -p site
+          cat > site/env.js << 'EOF'
+          // generated at build time
+          window.SUPABASE_URL = "${{ secrets.SUPABASE_URL }}";
+          window.SUPABASE_ANON_KEY = "${{ secrets.SUPABASE_ANON_KEY }}";
+          EOF
+          
       - name: Configure git identity
         run: |
           git config user.name  "github-actions[bot]"
@@ -56,7 +66,7 @@ jobs:
           fi
           git commit -m "Weekly scrape: $(date -u +'%Y-%m-%dT%H:%M:%SZ')"
           git push
-          
+
       - name: Upload artifact for Pages
         uses: actions/upload-pages-artifact@v3
         with:
